@@ -1,3 +1,19 @@
+/*
+ * Copyright 2008 Arthur Bogaart <spikylee at gmail.com>
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 package com.spikylee.hyves4j.util;
 
 import java.util.ArrayList;
@@ -11,7 +27,7 @@ import org.w3c.dom.NodeList;
 import org.w3c.dom.Text;
 
 /**
- * @author adcb
+ * @author Arthur Bogaart
  */
 public class XMLUtil {
 
@@ -104,7 +120,7 @@ public class XMLUtil {
 
     public static int getAttributeAsInt(Element el, String name) {
         String s = el.getAttribute(name);
-        if (s != null || s.length() > 0) {
+        if (s != null && s.length() > 0) {
             return Integer.parseInt(s);
         }
         return 0;
@@ -118,7 +134,7 @@ public class XMLUtil {
         if ("1".equals(s)) {
             return true;
         }
-        return new Boolean(s).booleanValue();
+        return Boolean.valueOf(s);
     }
     
     public static String prettyPrintXML(Node node) {
